--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "mailbox app",
   "main": "server.js",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.3",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "author": "Philip Simmons",
